The basics of the prism navigation (appCommand, navItem, view injection)

--- a/FamilyTree/FamilyTree/Views/MainWindow.xaml
+++ b/FamilyTree/FamilyTree/Views/MainWindow.xaml
@@ -5,11 +5,11 @@
         prism:ViewModelLocator.AutoWireViewModel="True"
         xmlns:core="clr-namespace:FamilyTree.Core;assembly=FamilyTree.Core"
         Title="{Binding Title}" Height="350" Width="525" >
-    <DockPanel>
+    <DockPanel LastChildFill="True">
         <ContentControl MinWidth="100"
             DockPanel.Dock="Left" prism:RegionManager.RegionName="{x:Static core:RegionNames.NavigationRegion}" />
         <ContentControl MinHeight="75"
             DockPanel.Dock="Top" prism:RegionManager.RegionName="{x:Static core:RegionNames.FunctionRegion}" />
-        <ContentControl DockPanel.Dock="Left" prism:RegionManager.RegionName="{x:Static core:RegionNames.ContentRegion}" />
+        <ContentControl Background="Red" prism:RegionManager.RegionName="{x:Static core:RegionNames.ContentRegion}" />
     </DockPanel>
 </Window>
