--- a/FamilyTree.Modules.Main/Views/NavigationMenu.xaml
+++ b/FamilyTree.Modules.Main/Views/NavigationMenu.xaml
@@ -1,16 +1,19 @@
 ﻿<UserControl x:Class="FamilyTree.Modules.Main.Views.NavigationMenu"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <StackPanel Orientation="Vertical">
-        <ItemsControl ItemsSource="{Binding MenuItems}">
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <Button Content="{Binding Caption}"/>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
-
-    </StackPanel>
+    <ListView x:Name="menuItems" ItemsSource="{Binding MenuItems}">
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="SelectionChanged">
+                <i:InvokeCommandAction Command="{Binding SelectCommand}" CommandParameter="{Binding ElementName=menuItems, Path=SelectedItem}"/>
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <TextBlock Text="{Binding Caption}"/>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+    </ListView>
 </UserControl>
