--- a/FamilyTree.Modules.Person/Views/NewPersonDialog.xaml
+++ b/FamilyTree.Modules.Person/Views/NewPersonDialog.xaml
@@ -16,10 +16,11 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Label Grid.Row="0"
                Content="Személy létrehozása"
-               FontSize="16" FontWeight="Bold"/>
+               FontSize="12" FontWeight="Bold"/>
         <Label Grid.Row="1" 
                Content="Vezetéknév"
                FontSize="12"/>
@@ -39,5 +40,12 @@
             Text="Szöveg"/>
         <DatePicker Grid.Row="6"/>
         <DatePicker Grid.Row="8"/>
+
+        <StackPanel Grid.Row="9" Orientation="Horizontal">
+            <RadioButton Content="Férfi" />
+            <RadioButton Content="Nő"/>
+        </StackPanel>
+        <Button Grid.Row="10"
+            Content="Mentés"/>
     </Grid>
 </UserControl>
