--- a/FamilyTree/FamilyTree/Views/MainWindow.xaml
+++ b/FamilyTree/FamilyTree/Views/MainWindow.xaml
@@ -11,9 +11,9 @@
                 <RowDefinition Height="2*"/>
                 <RowDefinition Height="3*"/>
             </Grid.RowDefinitions>
-            
-            
-            
+
+            <Button Command="{Binding UselessCommand}"/>
+
             <ContentControl MinWidth="250" Grid.Row="1"
                             prism:RegionManager.RegionName="{x:Static core:RegionNames.NavigationRegion}" />
         </Grid>
