--- a/FamilyTree.Modules.FamilyTree/Views/NewTreeDialog.xaml
+++ b/FamilyTree.Modules.FamilyTree/Views/NewTreeDialog.xaml
@@ -19,7 +19,7 @@
                Margin="10"
                Content="Családfa neve"/>
         <TextBox Grid.Row="2"
-                 Margin="10" Text="{Binding TreeName, Mode=OneWayToSource}"/>
+                 Margin="10" Text="{Binding TreeName, Mode=TwoWay}"/>
         <Button Grid.Row="3"
                 Margin="10"
                 Content="Mentés" Command="{Binding SubmitCommand}"/>
