--- a/FamilyTree.Modules.FamilyTree/Views/NewTreeDialog.xaml
+++ b/FamilyTree.Modules.FamilyTree/Views/NewTreeDialog.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="FamilyTree.Modules.FamilyTree.Views.NewTreeDialog"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True"
              Height="200" Width="200" Background="White">
@@ -19,7 +20,7 @@
                Margin="10"
                Content="Családfa neve"/>
         <TextBox Grid.Row="2"
-                 Margin="10" Text="{Binding TreeName, Mode=TwoWay}"/>
+                 Margin="10" Text="{Binding FamilyTreeName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <Button Grid.Row="3"
                 Margin="10"
                 Content="Mentés" Command="{Binding SubmitCommand}"/>
