--- a/FamilyTree.Modules.FamilyTree/Views/FamilyTreeListView.xaml
+++ b/FamilyTree.Modules.FamilyTree/Views/FamilyTreeListView.xaml
@@ -1,12 +1,13 @@
 ﻿<UserControl x:Class="FamilyTree.Modules.FamilyTree.Views.FamilyTreeListView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
     <DockPanel LastChildFill="True">
         <Label DockPanel.Dock="Top" Content="Családfák"/>
         <Button DockPanel.Dock="Top" Content="Frissít" Command="{Binding GetTreesCommand}"/>
-        <ListView ItemsSource="{Binding Trees}">
+        <ListView ItemsSource="{Binding Trees}" SelectedItem="{Binding FamilyTree}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
