--- a/FamilyTree.Modules.Person/Views/PersonInfoView.xaml
+++ b/FamilyTree.Modules.Person/Views/PersonInfoView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FamilyTree.Modules.Person.Views.PersonInfo"
+﻿<UserControl x:Class="FamilyTree.Modules.Person.Views.PersonInfoView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
@@ -17,8 +17,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Image Grid.Row="0" Grid.Column="0" Grid.RowSpan="2"/>
-        <Label Grid.Row="2" Grid.Column="0"
-               Content="Név"/>
+        <Label Grid.Row="2" Grid.Column="0"/>
         <Label Grid.Row="3" Grid.Column="0"
                Content="Nem"/>
         <Label Grid.Row="4" Grid.Column="0"
@@ -28,7 +27,7 @@
             Content="Események"/>
         <ScrollViewer Grid.Row="1" Grid.Column="1" Grid.RowSpan="4"
                       VerticalScrollBarVisibility="Auto">
-            <ListView>
+            <ListView >
 
             </ListView>
         </ScrollViewer>
