--- a/FamilyTree.Modules.Person/Views/PeopleListView.xaml
+++ b/FamilyTree.Modules.Person/Views/PeopleListView.xaml
@@ -6,7 +6,7 @@
     <DockPanel LastChildFill="True">
         <Label DockPanel.Dock="Top" Content="Emberek"/>
         <Button DockPanel.Dock="Top" Content="Frissít" Command="{Binding GetPeopleCommand}"/>
-        <ListView ItemsSource="{Binding People}">
+        <ListView ItemsSource="{Binding People}" SelectedItem="{Binding SelectedPerson}">
             <ListView.ItemTemplate>
                 <DataTemplate DataType="Business.Person">
                     <DockPanel LastChildFill="True">
