--- a/FamilyTree.Modules.Person/Views/PersonFunctions.xaml
+++ b/FamilyTree.Modules.Person/Views/PersonFunctions.xaml
@@ -1,19 +1,12 @@
 ﻿<UserControl x:Class="FamilyTree.Modules.Person.Views.PersonFunctions"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:prism="http://prismlibrary.com/"    
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <ListView>
-        <ListView.ItemsPanel>
-            <ItemsPanelTemplate>
-                <StackPanel Orientation="Horizontal"/>
-            </ItemsPanelTemplate>
-        </ListView.ItemsPanel>
-        <ListViewItem>
-            <TextBlock Text="Átnevez"/>
-        </ListViewItem>
-        <ListViewItem>
-            <TextBlock Text="Töröl"/>
-        </ListViewItem>
-    </ListView>
+    <StackPanel Orientation="Horizontal">
+        <Button Content="Új" Command="{Binding AddPersonCommand}" CommandParameter="{Binding SelectedPerson}"/>
+        <Button Content="Módosít"/>
+        <Button Content="Töröl"/>
+    </StackPanel>
 </UserControl>
