--- a/FamilyTree.Modules.Person/Views/PersonInfoView.xaml
+++ b/FamilyTree.Modules.Person/Views/PersonInfoView.xaml
@@ -17,18 +17,18 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Image Grid.Row="0" Grid.Column="0" Grid.RowSpan="2"/>
-        <Label Grid.Row="2" Grid.Column="0">
-            <Label.Content>
+        <TextBlock Grid.Row="2" Grid.Column="0">
+            <TextBlock.Text>
                 <MultiBinding StringFormat="{} {0} {1}">
-                    <Binding Path="FirstName"/>
-                    <Binding Path="LastName"/>
+                    <Binding Path="Person.FirstName"/>
+                    <Binding Path="Person.LastName"/>
                 </MultiBinding>
-            </Label.Content>
-        </Label>
+            </TextBlock.Text>
+        </TextBlock>
         <Label Grid.Row="3" Grid.Column="0"
-               Content="{Binding Gender}"/>
+               Content="{Binding Person.Gender}"/>
         <Label Grid.Row="4" Grid.Column="0"
-               Content="{Binding DateOfBirth}"/>
+               Content="{Binding Person.DateOfBirth}"/>
 
         <Label Grid.Row="0" Grid.Column="1"
             Content="Események"/>
