new person dialog

--- a/FamilyTree.Modules.Person/Views/NewPersonDialog.xaml
+++ b/FamilyTree.Modules.Person/Views/NewPersonDialog.xaml
@@ -5,55 +5,119 @@
              xmlns:converters="clr-namespace:FamilyTree.Modules.Person.Converters"
              xmlns:business="clr-namespace:FamilyTree.Business;assembly=FamilyTree.Business"
              prism:ViewModelLocator.AutoWireViewModel="True"
-             Width="200" Height="300" Background="White">
+             Width="600" Height="600" Background="White">
     <UserControl.Resources>
         <converters:GenderToBoolConverter x:Key="btg"/>
     </UserControl.Resources>
-    <Grid Margin="10">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="20*"/>
+            <ColumnDefinition Width="15*"/>
+            <ColumnDefinition Width="20*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <Label Grid.Row="0"
-               Content="Személy létrehozása"
-               FontSize="12" FontWeight="Bold"/>
-        <Label Grid.Row="1" 
-               Content="Vezetéknév"
-               FontSize="12"/>
-        <Label Grid.Row="3" 
-               Content="Utónév"
-               FontSize="12"/>
-        <Label Grid.Row="5" 
-               Content="Születési idő"
-               FontSize="12"/>
-        <Label Grid.Row="7" 
-               Content="Halálozási idő"
-               FontSize="12"/>
+        <Label Grid.Row="0" Grid.ColumnSpan="5"
+               Content="Személy létrehozása" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+               FontSize="22" FontWeight="Bold"/>
+        <Grid Margin="10" Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-        <TextBox Grid.Row="2"
-            Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}"/>
-        <TextBox Grid.Row="4"
-            Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}"/>
-        <DatePicker Grid.Row="6"
+            <TextBox Grid.Row="0"
+            Text="{Binding LastName}"/>
+            <TextBox Grid.Row="1"
+            Text="{Binding FirstName}"/>
+            <DatePicker Grid.Row="2"
                     SelectedDate="{Binding DateOfBirth}"/>
-        <DatePicker Grid.Row="8"
+            <DatePicker Grid.Row="3"
                     SelectedDate="{Binding DateOfDeath}"/>
 
-        <StackPanel Grid.Row="9" Orientation="Horizontal">
-            <RadioButton GroupName="gender" IsChecked="{Binding Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Male}}" Content="Férfi"/>
-            <RadioButton GroupName="gender" IsChecked="{Binding Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Female}}" Content="Nő"/>
+            <StackPanel Grid.Row="4" Orientation="Horizontal"
+                        HorizontalAlignment="Center" VerticalAlignment="Center">
+                <RadioButton GroupName="gender" IsChecked="{Binding Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Male}}" Content="Férfi"/>
+                <RadioButton GroupName="gender" IsChecked="{Binding Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Female}}" Content="Nő"/>
+            </StackPanel>
+        </Grid>
+
+        <StackPanel Orientation="Vertical"
+                    VerticalAlignment="Center"
+                    Grid.Column="1" Grid.Row="1">
+            <TextBlock Text="Kapcsolat típusa"/>
+            <ComboBox />
+            <TextBlock Text="Kezdete"/>
+            <DatePicker/>
+            <TextBlock Text="Vége"/>
+            <DatePicker/>
         </StackPanel>
-        <Button Grid.Row="10"
-            Content="Mentés"
+        
+        <Grid Margin="10" Grid.Row="2" Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Grid.Row="0"
+                Text="{Binding SelectedPerson.LastName}"/>
+            <TextBlock Grid.Row="1"
+                Text="{Binding SelectedPerson.FirstName}"/>
+            <TextBlock Grid.Row="2"
+                Text="{Binding SelectedPerson.DateOfBirth}"/>
+            <TextBlock Grid.Row="3"
+                Text="{Binding SelectedPerson.DateOfDeath}"/>
+
+            <StackPanel Grid.Row="4" Orientation="Horizontal"
+                        HorizontalAlignment="Center" VerticalAlignment="Center">
+                <RadioButton GroupName="gender" IsEnabled="False" IsChecked="{Binding SelectedPerson.Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Male}}" Content="Férfi"/>
+                <RadioButton GroupName="gender" IsEnabled="False" IsChecked="{Binding SelectedPerson.Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Female}}" Content="Nő"/>
+            </StackPanel>
+        </Grid>
+        <Button Grid.Row="3" Grid.ColumnSpan="5" 
+                Content="Mentés"
+                Margin="10"
                 Command="{Binding SubmitNewPersonCommand}"/>
+
+        <Grid Margin="10" Grid.Column="1" Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Label Grid.Row="0" 
+               Content="Vezetéknév"
+               FontSize="12"
+               HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Label Grid.Row="1" 
+               Content="Utónév"
+               FontSize="12"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Label Grid.Row="2" 
+               Content="Született"
+               FontSize="12"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Label Grid.Row="3" 
+               Content="Elhunyt"
+               FontSize="12"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Label Grid.Row="4"
+               Content="Nem"
+               FontSize="12"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+
+        </Grid>
     </Grid>
 </UserControl>
