--- a/FamilyTree.Modules.Person/Views/ModifyPersonView.xaml
+++ b/FamilyTree.Modules.Person/Views/ModifyPersonView.xaml
@@ -4,13 +4,15 @@
              xmlns:converters="clr-namespace:FamilyTree.Modules.Person.Converters"
              xmlns:business="clr-namespace:FamilyTree.Business;assembly=FamilyTree.Business"
              xmlns:prism="http://prismlibrary.com/"
-             Width="200" Height="300" Background="White"          
+             Width="200" Height="600" Background="White"          
              prism:ViewModelLocator.AutoWireViewModel="True">
     <UserControl.Resources>
         <converters:GenderToBoolConverter x:Key="btg"/>
     </UserControl.Resources>
     <Grid Margin="10">
         <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="6*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
@@ -24,35 +26,45 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Label Grid.Row="0"
-               Content="Személy létrehozása"
+               Content="Személy módosítása"
                FontSize="12" FontWeight="Bold"/>
-        <Label Grid.Row="1" 
+        <Label Grid.Row="3" 
                Content="Vezetéknév"
                FontSize="12"/>
-        <Label Grid.Row="3" 
+        <Label Grid.Row="5" 
                Content="Utónév"
                FontSize="12"/>
-        <Label Grid.Row="5" 
+        <Label Grid.Row="7" 
                Content="Születési idő"
                FontSize="12"/>
-        <Label Grid.Row="7" 
+        <Label Grid.Row="9" 
                Content="Halálozási idő"
                FontSize="12"/>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="9*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-        <TextBox Grid.Row="2"
-            Text="{Binding LastName, Mode=TwoWay}"/>
+            <Image Source="{Binding Image}"
+                   Height="150" Width="150"
+                   Grid.Row="0"/>
+            <Button Grid.Row="1" Content="+" Command="{Binding SelectPictureCommand}"/>
+        </Grid>
         <TextBox Grid.Row="4"
+            Text="{Binding LastName, Mode=TwoWay}"/>
+        <TextBox Grid.Row="6"
             Text="{Binding FirstName, Mode=TwoWay}"/>
-        <DatePicker Grid.Row="6"
-                    SelectedDate="{Binding DateOfBirth, Mode=TwoWay}"/>
         <DatePicker Grid.Row="8"
+                    SelectedDate="{Binding DateOfBirth, Mode=TwoWay}"/>
+        <DatePicker Grid.Row="10"
                     SelectedDate="{Binding DateOfDeath, Mode=TwoWay}"/>
 
-        <StackPanel Grid.Row="9" Orientation="Horizontal">
+        <StackPanel Grid.Row="11" Orientation="Horizontal">
             <RadioButton GroupName="gender" IsChecked="{Binding Gender, Mode=TwoWay, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Male}}" Content="Férfi"/>
             <RadioButton GroupName="gender" IsChecked="{Binding Gender, Mode=TwoWay, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Female}}" Content="Nő"/>
         </StackPanel>
-        <Button Grid.Row="10"
+        <Button Grid.Row="12"
             Content="Mentés"
                 Command="{Binding AsyncCommand}"/>
     </Grid>
