--- a/FamilyTree.Modules.Relationship/Views/DeleteRelationshipView.xaml
+++ b/FamilyTree.Modules.Relationship/Views/DeleteRelationshipView.xaml
@@ -3,26 +3,27 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.Column="0"
-                   Grid.ColumnSpan="2"
-                   Text="Hejehujapriccpracc"/>
+            <TextBlock Grid.Row="0" Grid.Column="0"
+                       Grid.ColumnSpan="2"
+                       Text="Biztosan törli?"/>
 
-        <Button Grid.Row="1" Grid.Column="0"
-                Content="Igen"
-                Command="{Binding SaveCommand}"/> <!-- TODO: command parameter-->
-        <Button Grid.Row="1" Grid.Column="1"
-                Content="Nem"
-                IsCancel="True"/>
+            <Button Grid.Row="1" Grid.Column="0"
+                    Content="Igen"
+                    Command="{Binding SaveCommand}"
+                    IsDefault="True"/> <!-- TODO: command parameter-->
+            <Button Grid.Row="1" Grid.Column="1"
+                    Content="Nem"
+                    IsCancel="True"/>
 
-    </Grid>
+        </Grid>
 </UserControl>
