--- a/FamilyTree.Modules.FamilyTree/Views/NewFamilyTreeView.xaml
+++ b/FamilyTree.Modules.FamilyTree/Views/NewFamilyTreeView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FamilyTree.Modules.FamilyTree.Views.NewTreeDialog"
+﻿<UserControl x:Class="FamilyTree.Modules.FamilyTree.Views.NewFamilyTreeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
