--- a/FamilyTree.Modules.FamilyTree/Views/BackFamilyTreeView.xaml
+++ b/FamilyTree.Modules.FamilyTree/Views/BackFamilyTreeView.xaml
@@ -4,7 +4,7 @@
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
     <StackPanel Orientation="Horizontal">
-        <Button Width="100" Height="75" Content="Vissza" Command="{Binding NavigatBackCommand}" CommandParameter="FamilyTreeLisView" />
+        <Button Width="100" Height="75" Content="Vissza" Command="{Binding NavigateBackCommand}" />
 
     </StackPanel>
 </UserControl>
