--- a/FamilyTree.Modules.FamilyTree/Views/ModifyFamilyTreeView.xaml
+++ b/FamilyTree.Modules.FamilyTree/Views/ModifyFamilyTreeView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FamilyTree.Modules.FamilyTree.Views.ModifyTreeDialog"
+﻿<UserControl x:Class="FamilyTree.Modules.FamilyTree.Views.ModifyFamilyTreeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
