--- a/FamilyTree.Modules.FamilyTree/Views/ModifyFamilyTreeView.xaml
+++ b/FamilyTree.Modules.FamilyTree/Views/ModifyFamilyTreeView.xaml
@@ -19,7 +19,7 @@
                Margin="10"
                Content="Családfa neve"/>
         <TextBox Grid.Row="2"
-                 Margin="10" Text="{Binding FamilyTree.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                 Margin="10" Text="{Binding SelectedTree.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <Button Grid.Row="3"
                 Margin="10"
                 Content="Mentés" Command="{Binding ModifyCommand}"/>
