--- a/FamilyTree.Modules.FamilyTree/Views/FunctionFamilyTreeView.xaml
+++ b/FamilyTree.Modules.FamilyTree/Views/FunctionFamilyTreeView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FamilyTree.Modules.FamilyTree.Views.FamilyTreeFunctionView"
+﻿<UserControl x:Class="FamilyTree.Modules.FamilyTree.Views.FunctionFamilyTreeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"
