--- a/FamilyTree.Modules.FamilyTree/Views/FamilyTreeListView.xaml
+++ b/FamilyTree.Modules.FamilyTree/Views/FamilyTreeListView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FamilyTree.Modules.FamilyTree.Views.FamilyTreeListView"
+﻿<UserControl x:Class="FamilyTree.Modules.FamilyTree.Views.ListFamilyTreeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
