--- a/FamilyTree.Modules.Person/Views/DeletePersonView.xaml
+++ b/FamilyTree.Modules.Person/Views/DeletePersonView.xaml
@@ -4,27 +4,24 @@
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.Column="0"
-                   Grid.ColumnSpan="2"
-                   Text="Biztosan törli?"/>
+        <TextBlock Grid.Row="0"
+                   Text="Biztosan törli?"
+                   TextAlignment="Center"/>
 
-        <Button Grid.Row="1" Grid.Column="0"
-                Content="Igen"
+        <TextBlock Grid.Row="1"
+                   Text="{Binding SelectedPerson.FirstName}"
+                   TextAlignment="Center"/>
+
+        <Button Grid.Row="2" Grid.Column="0"
+                Content="Törlöm"
                 Command="{Binding DeleteCommand}"
                 IsDefault="True"/>
-        <!-- TODO: command parameter-->
-        <Button Grid.Row="1" Grid.Column="1"
-                Content="Nem"
-                IsCancel="True"/>
 
     </Grid>
 </UserControl>
