--- a/FamilyTree.Modules.Person/Views/CreatePersonView.xaml
+++ b/FamilyTree.Modules.Person/Views/CreatePersonView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FamilyTree.Modules.Person.Views.NewPersonDialog"
+﻿<UserControl x:Class="FamilyTree.Modules.Person.Views.CreatePersonView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"       
