--- a/FamilyTree.Modules.Person/Views/PersonFunctions.xaml
+++ b/FamilyTree.Modules.Person/Views/PersonFunctions.xaml
@@ -5,11 +5,13 @@
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              prism:ViewModelLocator.AutoWireViewModel="True">
     <StackPanel Orientation="Horizontal">
-        <Button Width="100" Height="75" Content="Új" Command="{Binding AddPersonCommand}" CommandParameter="{Binding SelectedPerson}"/>
-        <Button Width="100" Height="75" Content="Módosít" Command="{Binding ModifyPersonCommand}" CommandParameter="{Binding SelectedPerson}"/>
-        <Button Width="100" Height="75" Content="Megtekint" Command="{Binding ShowPersonCommand}" CommandParameter="{Binding SelectedPerson}"/>
-        <Button Width="100" Height="75" Content="Töröl" Command="{Binding DeletePersonCommand}" CommandParameter="{Binding SelectedPerson}"/>
-        <Button Width="100" Height="75" Content="Kapcsolatok" Command="{Binding NavigateRelationsCommand}"/>
+        <Button Width="100" Height="75" Content="+Anya" Command="{Binding NewMotherCommand}"/>
+        <Button Width="100" Height="75" Content="+Apa" Command="{Binding NewFatherCommand}"/>
+        <Button Width="100" Height="75" Content="+Gyerek" Command="{Binding NewChildCommand}"/>
+        <Button Width="100" Height="75" Content="+Pár" Command="{Binding NewPairCommand}"/>
+        <Button Width="100" Height="75" Content="Módosít" Command="{Binding ModifyPersonCommand}"/>
+        <Button Width="100" Height="75" Content="Megtekint" Command="{Binding ShowPersonCommand}"/>
+        <Button Width="100" Height="75" Content="Töröl" Command="{Binding DeletePersonCommand}"/>
         <Button Width="100" Height="75" Content="Nézet váltás" Command="{Binding NavigateTreeViewCommand}"/>
     </StackPanel>
 </UserControl>
