--- a/FamilyTree.Modules.Person/Views/InfoPersonView.xaml
+++ b/FamilyTree.Modules.Person/Views/InfoPersonView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FamilyTree.Modules.Person.Views.PersonInfoView"
+﻿<UserControl x:Class="FamilyTree.Modules.Person.Views.InfoPersonView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
