--- a/FamilyTree.Modules.Relationship/Views/DeleteRelationshipView.xaml
+++ b/FamilyTree.Modules.Relationship/Views/DeleteRelationshipView.xaml
@@ -3,27 +3,30 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
+    <Grid>
+        <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0" Grid.Column="0"
-                       Grid.ColumnSpan="2"
+            <TextBlock Grid.Row="0"
                        Text="Biztosan törli?"/>
 
-            <Button Grid.Row="1" Grid.Column="0"
-                    Content="Igen"
+        <TextBlock Grid.Row="1">
+            <TextBlock.Text>
+                <MultiBinding StringFormat="{}{0} --- {1}">
+                    <Binding Path="PersonFrom.FirstName"/>
+                    <Binding Path="PersonTo.FirstName"/>
+                </MultiBinding>
+            </TextBlock.Text>
+        </TextBlock>
+                       
+        
+            <Button Grid.Row="2" Grid.Column="0"
+                    Content="Törlöm"
                     Command="{Binding SaveCommand}"
                     IsDefault="True"/> <!-- TODO: command parameter-->
-            <Button Grid.Row="1" Grid.Column="1"
-                    Content="Nem"
-                    IsCancel="True"/>
 
         </Grid>
 </UserControl>
