--- a/FamilyTree.Modules.Relationship/Views/BackRelationshipView.xaml
+++ b/FamilyTree.Modules.Relationship/Views/BackRelationshipView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <Grid>
-            
-    </Grid>
+    <StackPanel Orientation="Horizontal">
+        <Button Content="Vissza" Height="75" Width="100" Command="{Binding NavigateBackCommand}"/>
+    </StackPanel>
 </UserControl>
