--- a/FamilyTree.Modules.Main/Views/NavigationMenu.xaml
+++ b/FamilyTree.Modules.Main/Views/NavigationMenu.xaml
@@ -6,7 +6,7 @@
              prism:ViewModelLocator.AutoWireViewModel="True">
     <ListView x:Name="menuItems" ItemsSource="{Binding MenuItems}">
         <i:Interaction.Triggers>
-            <i:EventTrigger EventName="SelectionChanged">
+            <i:EventTrigger EventName="MouseLeftButtonUp">
                 <i:InvokeCommandAction Command="{Binding SelectCommand}" CommandParameter="{Binding ElementName=menuItems, Path=SelectedItem}"/>
             </i:EventTrigger>
         </i:Interaction.Triggers>
