--- a/FamilyTree.Modules.Person/Views/ParentTreePersonView.xaml
+++ b/FamilyTree.Modules.Person/Views/ParentTreePersonView.xaml
@@ -4,6 +4,13 @@
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Button Grid.Row="0"
+            Content="Kiír" Command="{Binding DrawCommand}"/>
+        <TextBlock Grid.Row="1"
+                   Text="{Binding OutputString}"/>
     </Grid>
 </UserControl>
