--- a/FamilyTree.Modules.Person/Views/ParentTreePersonView.xaml
+++ b/FamilyTree.Modules.Person/Views/ParentTreePersonView.xaml
@@ -1,16 +1,44 @@
 ﻿<UserControl x:Class="FamilyTree.Modules.Person.Views.ParentTreePersonView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:prism="http://prismlibrary.com/"       
+             xmlns:model="clr-namespace:FamilyTree.Business;assembly=FamilyTree.Business"
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Button Grid.Row="0"
-            Content="Kiír" Command="{Binding DrawCommand}"/>
-        <TextBlock Grid.Row="1"
-                   Text="{Binding OutputString}"/>
-    </Grid>
+    <StackPanel x:Name="stackPanel" Orientation="Vertical">
+        <TextBlock Text="Szülők"/>
+        <Button Content="Frissít" Command="{Binding DrawCommand}"/>
+        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+            <ItemsControl ItemsSource="{Binding Nodes}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Canvas Background="White" Width="3000" Height="2000" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
+                        </Canvas>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.Resources>
+                    <DataTemplate DataType="{x:Type model:Node}">
+                        <Button Width="{Binding Width}"
+                                Height="{Binding Height}">
+                            <Button.RenderTransform>
+                                <TranslateTransform X="{Binding LeftCoordinate, Mode=TwoWay}" Y="{Binding TopCoordinate, Mode=TwoWay}"/>
+                            </Button.RenderTransform>
+                            <StackPanel Orientation="Vertical" Background="White">
+                                <Image Width="80" Height="80"/>
+                                <TextBlock TextAlignment="Center">
+                                    <TextBlock.Text>
+                                        <!--Valamiért csak ezzel működik-->
+                                        <MultiBinding StringFormat="{}{0} {1}">
+                                            <Binding Path="Person.FirstName"/>
+                                            <Binding Path="Person.LastName"/>
+                                        </MultiBinding>
+                                    </TextBlock.Text>
+                                </TextBlock>
+                            </StackPanel>
+                        </Button>
+                    </DataTemplate>
+                </ItemsControl.Resources>
+            </ItemsControl>
+        </ScrollViewer>
+    </StackPanel>
 </UserControl>
