--- a/FamilyTree.Modules.Person/Views/InfoPersonView.xaml
+++ b/FamilyTree.Modules.Person/Views/InfoPersonView.xaml
@@ -1,42 +1,66 @@
 ﻿<UserControl x:Class="FamilyTree.Modules.Person.Views.InfoPersonView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:prism="http://prismlibrary.com/"        
+             xmlns:converters="clr-namespace:FamilyTree.Modules.Person.Converters"
+             xmlns:business="clr-namespace:FamilyTree.Business;assembly=FamilyTree.Business"
              prism:ViewModelLocator.AutoWireViewModel="True"
-             Height="400" Width="600" Background="White">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="7*"/>
-        </Grid.ColumnDefinitions>
+             Height="600" Width="500" Background="White">
+    <UserControl.Resources>
+        <converters:GenderToBoolConverter x:Key="btg"/>
+    </UserControl.Resources>
+    <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="3*"/>
+            <RowDefinition Height="6*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Image Grid.Row="0" Grid.Column="0" Grid.RowSpan="2"/>
-        <TextBlock Grid.Row="2" Grid.Column="0">
-            <TextBlock.Text>
-                <MultiBinding StringFormat="{} {0} {1}">
-                    <Binding Path="Person.FirstName"/>
-                    <Binding Path="Person.LastName"/>
-                </MultiBinding>
-            </TextBlock.Text>
-        </TextBlock>
-        <Label Grid.Row="3" Grid.Column="0"
-               Content="{Binding Person.Gender}"/>
-        <Label Grid.Row="4" Grid.Column="0"
-               Content="{Binding Person.DateOfBirth}"/>
+        <Label Grid.Row="0"
+               Content="Személy módosítása"
+               FontSize="12" FontWeight="Bold"/>
+        <Label Grid.Row="3" 
+               Content="Vezetéknév"
+               FontSize="12"/>
+        <Label Grid.Row="5" 
+               Content="Utónév"
+               FontSize="12"/>
+        <Label Grid.Row="7" 
+               Content="Születési idő"
+               FontSize="12"/>
+        <Label Grid.Row="9" 
+               Content="Halálozási idő"
+               FontSize="12"/>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="9*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" Grid.Column="1"
-            Content="Események"/>
-        <ScrollViewer Grid.Row="1" Grid.Column="1" Grid.RowSpan="4"
-                      VerticalScrollBarVisibility="Auto">
-            <ListView>
+            <Image Source="{Binding Image}"
+                   Height="150" Width="150"
+                   Grid.Row="0"/>
+        </Grid>
+        <TextBlock Grid.Row="4"
+            Text="{Binding LastName, Mode=TwoWay}"/>
+        <TextBlock Grid.Row="6"
+            Text="{Binding FirstName, Mode=TwoWay}"/>
+        <TextBlock Grid.Row="8" 
+                   Text="{Binding DateOfBirth, Mode=TwoWay}"/>
+        <TextBlock Grid.Row="10"
+                   Text="{Binding DateOfDeath, Mode=TwoWay}"/>
 
-            </ListView>
-        </ScrollViewer>
+        <StackPanel Grid.Row="11" Orientation="Horizontal">
+            <RadioButton IsEnabled="False" GroupName="gender" IsChecked="{Binding Gender, Mode=TwoWay, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Male}}" Content="Férfi"/>
+            <RadioButton IsEnabled="False" GroupName="gender" IsChecked="{Binding Gender, Mode=TwoWay, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Female}}" Content="Nő"/>
+        </StackPanel>
     </Grid>
 </UserControl>
